--- a/assets/main.css
+++ b/assets/main.css
@@ -1,10 +1,5 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-/* tailwindcss typografie */
+@import "tailwindcss";
 @plugin "@tailwindcss/typography";
-
 
 /* tailwind css animated (compatible for tw 4.x */
 @import "tailwindcss";
@@ -13,3 +8,70 @@
 /* tailwind css v4.x (animations */
 @import "tailwindcss";
 @import "tailwindcss-intersect";
+
+
+@theme {
+  --text-big-s: 5rem;
+
+  --breakpoint-3xl: 1880px;
+
+  --color-text-50: hsl(var(--text-50));
+  --color-text-100: hsl(var(--text-100));
+  --color-text-200: hsl(var(--text-200));
+  --color-text-300: hsl(var(--text-300));
+  --color-text-400: hsl(var(--text-400));
+  --color-text-500: hsl(var(--text-500));
+  --color-text-600: hsl(var(--text-600));
+  --color-text-700: hsl(var(--text-700));
+  --color-text-800: hsl(var(--text-800));
+  --color-text-900: hsl(var(--text-900));
+  --color-text-950: hsl(var(--text-950));
+
+  --color-background-50: hsl(var(--background-50));
+  --color-background-100: hsl(var(--background-100));
+  --color-background-200: hsl(var(--background-200));
+  --color-background-300: hsl(var(--background-300));
+  --color-background-400: hsl(var(--background-400));
+  --color-background-500: hsl(var(--background-500));
+  --color-background-600: hsl(var(--background-600));
+  --color-background-700: hsl(var(--background-700));
+  --color-background-800: hsl(var(--background-800));
+  --color-background-900: hsl(var(--background-900));
+  --color-background-950: hsl(var(--background-950));
+
+  --color-primary-50: hsl(var(--primary-50));
+  --color-primary-100: hsl(var(--primary-100));
+  --color-primary-200: hsl(var(--primary-200));
+  --color-primary-300: hsl(var(--primary-300));
+  --color-primary-400: hsl(var(--primary-400));
+  --color-primary-500: hsl(var(--primary-500));
+  --color-primary-600: hsl(var(--primary-600));
+  --color-primary-700: hsl(var(--primary-700));
+  --color-primary-800: hsl(var(--primary-800));
+  --color-primary-900: hsl(var(--primary-900));
+  --color-primary-950: hsl(var(--primary-950));
+
+  --color-secondary-50: hsl(var(--secondary-50));
+  --color-secondary-100: hsl(var(--secondary-100));
+  --color-secondary-200: hsl(var(--secondary-200));
+  --color-secondary-300: hsl(var(--secondary-300));
+  --color-secondary-400: hsl(var(--secondary-400));
+  --color-secondary-500: hsl(var(--secondary-500));
+  --color-secondary-600: hsl(var(--secondary-600));
+  --color-secondary-700: hsl(var(--secondary-700));
+  --color-secondary-800: hsl(var(--secondary-800));
+  --color-secondary-900: hsl(var(--secondary-900));
+  --color-secondary-950: hsl(var(--secondary-950));
+
+  --color-accent-50: hsl(var(--accent-50));
+  --color-accent-100: hsl(var(--accent-100));
+  --color-accent-200: hsl(var(--accent-200));
+  --color-accent-300: hsl(var(--accent-300));
+  --color-accent-400: hsl(var(--accent-400));
+  --color-accent-500: hsl(var(--accent-500));
+  --color-accent-600: hsl(var(--accent-600));
+  --color-accent-700: hsl(var(--accent-700));
+  --color-accent-800: hsl(var(--accent-800));
+  --color-accent-900: hsl(var(--accent-900));
+  --color-accent-950: hsl(var(--accent-950));
+}
